# rust-duckdb-crud-project

./: Cargo.toml  db_file.duckdb  db_file.duckdb.wal
src/: main.rs
static/: index.html
