[package]
name = "rust_duckdb_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] } # Adjust the version if needed
serde = { version = "1.0", features = ["derive"] }
duckdb = { version = "0.9.2", features = ["bundled"] }


